--- a/goneovim/.config/goneovim/settings.toml
+++ b/goneovim/.config/goneovim/settings.toml
@@ -9,9 +9,9 @@ BorderlessWindow = true
 Gap = 0
 
 ## Editor minimum window width (>= 400)
-# Width = 800
+Width = 1400
 ## Editor minimum window height (>= 300)
-# Height = 600
+Height = 1000
 ## Create a small margin on the left and right sides of the application window.
 # Gap = 2
 
@@ -46,7 +46,7 @@ FileOpenCmd = ":e"
 ## In Windows
 # FontFamily = "Windows"
 ## Fontsize is
- FontSize = 12
+ FontSize = 20
 ## linespace is
  #Linespace = 27
 
