--- a/pycharm/.ideavimrc
+++ b/pycharm/.ideavimrc
@@ -4,6 +4,16 @@
 " Show a few lines of context around the cursor. Note that this makes the
 " text scroll if you mouse-click near the start or end of the window.
 set scrolloff=5
+syntax on
+set number relativenumber
+set hlsearch
+set ignorecase
+set smartcase
+set nu
+set clipboard=unnamedplus
+
+
+
 
 " Do incremental searching.
 set incsearch
@@ -15,14 +25,45 @@ nmap S :w<cr>
 imap ; <Esc>
 imap ； <Esc>
 nmap <leader>E :e ~/.ideavimrc<CR>
-nmap <leader>r :source ~/.ideavimrc<CR>
-""noremap <leader>h :nohlsearch<CR>
+nmap <leader>rr :source ~/.ideavimrc<CR>
+noremap <leader>h :nohlsearch<CR>
 nmap \ :
 
+nmap H ^
+nmap L $
+vmap H ^
+vmap L $
+
+
+
+
+" ==================================================
+" 文件树
+" ==================================================
+nnoremap <Leader>e :NERDTreeToggle<CR>
+" ==================================================
+" TAB导航
+" ==================================================
 nmap <TAB> gt
 nmap <S-TAB> gT
 nmap <C-w> :bd<CR>
 
+" ==================================================
+" 优化缩进
+" ==================================================
+vnoremap < <gv
+vnoremap > >gv
+
+" ==================================================
+" 多窗口操作
+" ==================================================
+inoremap <C-h> <Left>
+inoremap <C-j> <Down>
+inoremap <C-k> <Up>
+inoremap <C-l> <Right>
+
+" Code Action
+vnoremap = :action ReformatCode<CR>
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
@@ -43,19 +84,44 @@ let g:NERDTreeMapActivateNode='l'
 let g:NERDTreeMapJumpParent='h'
 
 """ The Leader Key
+nnoremap <SPACE> <Nop>
 let mapleader=" "
 let leader=" "
 
 
 """ 导航 Navigated
-
+""" 让pycharm识别键位
 sethandler <c-j> a:vimrc
 sethandler <c-k> a:vimrc
 
+" ==================================================
+" 插入模式光标移动
+" ==================================================
 noremap <c-h> <c-w>h
 noremap <c-j> <c-w>j
 noremap <c-k> <c-w>k
 noremap <c-l> <c-w>l
+
 nnoremap <c-\> :action SplitVertically<CR>
 nnoremap <c--> :action SplitHorizontally<CR>
+
+
+""" pycharm action
+nnoremap <Leader>o :action EditSourceInNewWindow<CR>
+nnoremap <Leader>n :action NextWindow<CR>
+""nnoremap <Leader>p :action GotoFile<CR>
+nnoremap <c-p> :action GotoFile<CR>
+nnoremap <c-z> :action ToggleDistractionFreeMode<CR>
+nnoremap <Leader>r :action Run<CR>
+
+nnoremap <Leader>tt :action ActivateTerminalToolWindow<CR>
+""nnoremap <Leader>t :action Terminal.OpenInTerminal<CR>
+""nnoremap <Leader>e :action ActivateProjectToolWindow<CR>
+NERDTreeToggle
+""nnoremap <Leader>e :action FileMenu<CR> "导航菜单
+
+
+"Help action
+":actionlist git
+":actionlist *
 
