优化zsh启动时间

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,6 +27,14 @@ bind ` send-prefix
 set -g default-command $SHELL
 set -g default-shell $SHELL
 
+set -g status-utf8 on
+# 支持 utf-8
+
+
+
+# ┌────────┐
+# │ keymap │
+# └────────┘
 
 # Reload the config
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
@@ -36,8 +44,12 @@ bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 # Splits
 unbind %
 unbind '"'
-bind b split-window -v  # vertical split
-bind v split-window -h  # horizontal split
+bind b split-window -v -c '#{pane_current_path}' # 当前位置 垂直分割窗口
+bind v split-window -h -c '#{pane_current_path}' # 当前位置 水平分割窗口
+
+
+#bind b split-window -v # 当前位置 垂直分割窗口
+#bind v split-window -h # 当前位置 水平分割窗口
 
 # Panes numbers
 set -g display-panes-active-colour colour20
@@ -64,6 +76,8 @@ set -qg mouse on
 # Default terminal mode
 set -g default-terminal 'xterm-256color'
 set -sa terminal-overrides ',xterm-256color:RGB'
+
+
 
 #bind -n S-left previous-window
 #bind -n S-right next-window
@@ -150,3 +164,6 @@ set-option -g history-limit 250000
 set-option -g renumber-windows on
 
 set -g status-right '#[fg=green,bg=default,bright]#(uptime) #[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d%a'
+
+
+set -s escape-time 1
