--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ bind ` send-prefix
 set -g default-command $SHELL
 set -g default-shell $SHELL
 
-set -g status-utf8 on
+#set -g status-utf8 on
 # 支持 utf-8
 
 
