--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,12 +40,18 @@ set -g default-shell $SHELL
 bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 
 
+# ┌────────┐
+# │ window │
+# └────────┘
 
-# Splits
 unbind %
 unbind '"'
-bind b split-window -v -c '#{pane_current_path}' # 当前位置 垂直分割窗口
-bind v split-window -h -c '#{pane_current_path}' # 当前位置 水平分割窗口
+bind b split-window -v -c '#{pane_current_path}' # 当前路径 垂直分割窗口
+bind v split-window -h -c '#{pane_current_path}' # 当前路径 水平分割窗口
+bind c new-window -c "#{pane_current_path}"      # 当前路径 水平分割窗口
+
+
+
 
 
 #bind b split-window -v # 当前位置 垂直分割窗口
