--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -113,64 +113,102 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 
+# ┌───────┐
+# │ Style │
+# └───────┘
 
+set -g status-utf8 on
 
-set -g status-bg '#718599'
-set -g status-fg white
 set -g status-left-length 40
-
-#test
-
-# default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
-
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=colour234,dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default,bright
-
-# pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour136,bg=colour235
-
-# message text
-set-option -g message-style bg=colour235,fg=colour166
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# allow the title bar to adapt to whatever host you connect to
-set -g set-titles on
-set -g set-titles-string "#T"
-
-# import
-#if-shell "uname -s | grep -q Darwin" "source ~/.tmux.conf.osx"
-
-# Powerline
-#source ~/.tmux.powerline.conf
+# set -g status-left ' '
+set -g status-right ''
+# set -g status-left "#[fg=colour233,bg=colour12,bold] #h: #S #[fg=colour233,bg=yellow,bold] #I #[fg=colour233,bg=cyan,bold] #P "
+set -g status-left "#[fg=colour233,bg=colour12,bold] %m/%d | #[fg=colour233,bg=bg=cyan,bold] %H:%M "
 
 
-set -g focus-events on
+set -g status-fg white
+set -g status-bg black
+
+set-option -g status-position bottom
+
+setw -g window-status-current-format '#[underscore,bold]#I #W'
+setw -g window-status-format '#I #W'
+set -g status-justify centre  # 
 
 
-# Statusbarset -g status-style bg=black
-set -g status-style bg=yellow
-set -g status-left ''
-set -g status-right '#[fg=black,bg=yellow] #(whoami)@#H '
-set -g status-right-length 70
-setw -g window-status-current-format '#[fg=yellow,bg=black] #I #W #F '
-setw -g window-status-format '#[fg=black,bg=yellow][#I #W #F]'
-set -g window-status-separator ''
-set-option -g history-limit 250000
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+setw -g window-status-attr dim
 
-set-option -g renumber-windows on
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+setw -g window-status-current-attr bright
 
-set -g status-right '#[fg=green,bg=default,bright]#(uptime) #[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d%a'
+# ┌─────┐
+# │ 2.0 │
+# └─────┘
 
 
-set -s escape-time 1
+
+# set -g status-bg '#718599'
+# set -g status-fg white
+# set -g status-left-length 40
+#
+# #test
+#
+# # default statusbar colors
+# set-option -g status-style bg=colour235,fg=colour136,default
+#
+# # default window title colors
+# set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+#
+# # active window title colors
+# set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+#
+# # pane border
+# set-option -g pane-border-style fg=colour235 #base02
+# set-option -g pane-active-border-style fg=colour136,bg=colour235
+#
+# # message text
+# set-option -g message-style bg=colour235,fg=colour166
+#
+# # pane number display
+# set-option -g display-panes-active-colour colour33 #blue
+# set-option -g display-panes-colour colour166 #orange
+#
+# # clock
+# set-window-option -g clock-mode-colour colour64 #green
+#
+# # allow the title bar to adapt to whatever host you connect to
+# set -g set-titles on
+# set -g set-titles-string "#T"
+#
+# # import
+# #if-shell "uname -s | grep -q Darwin" "source ~/.tmux.conf.osx"
+#
+# # Powerline
+# #source ~/.tmux.powerline.conf
+#
+#
+# set -g focus-events on
+#
+#
+# # # Statusbarset -g status-style bg=black
+# # set -g status-style bg=yellow
+# # set -g status-left ''
+# # set -g status-right '#[fg=black,bg=yellow] #(whoami)@#H '
+# # set -g status-right-length 70
+# # setw -g window-status-current-format '#[fg=yellow,bg=black] #I #W #F '
+# # setw -g window-status-format '#[fg=black,bg=yellow][#I #W #F]'
+# # set -g window-status-separator ''
+# # set-option -g history-limit 250000
+# #
+# # set-option -g renumber-windows on
+# #
+# # set -g status-right '#[fg=green,bg=default,bright]#(uptime) #[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d%a'
+# #
+# #
+# # set -s escape-time 1
+# #
+# #
+# #
