add super charged lingk

--- a/obsidian/style-settings.json
+++ b/obsidian/style-settings.json
@@ -161,17 +161,17 @@
   "minimal-advanced@@font-smallest": 10,
   "minimal-style@@title-alignment": "title-align-body",
   "minimal-style@@show-grabber": false,
-  "minimal-style@@ax1@@dark": "#BF95F9",
+  "minimal-style@@ax1@@dark": "#7A9AD5",
   "minimal-style@@link-weight": 700,
   "minimal-style@@h1": "1.7em",
   "minimal-style@@h1-variant": "normal",
-  "minimal-style@@h1-l": false,
-  "minimal-style@@h2": "1.4em",
-  "minimal-style@@h3": "1.2em",
-  "minimal-style@@h4": "1.0em",
-  "minimal-style@@h1-color@@dark": "#FFC776",
+  "minimal-style@@h1-l": true,
+  "minimal-style@@h2": "1.5em",
+  "minimal-style@@h3": "1.3em",
+  "minimal-style@@h4": "1.2em",
+  "minimal-style@@h1-color@@dark": "#F1C789",
   "minimal-style@@h3-color@@dark": "#FAE497",
-  "minimal-style@@h4-color@@dark": "#9CE53D",
+  "minimal-style@@h4-color@@dark": "#E39628",
   "minimal-style@@font-code": "16px",
   "minimal-style@@minimal-strike-lists": true,
   "minimal-style@@list-spacing": 0.075,
@@ -196,16 +196,43 @@
   "minimal-style@@red@@dark": "#F20000",
   "minimal-style@@tag-radius": "14px",
   "minimal-style@@minimal-unstyled-tags": false,
-  "minimal-style@@tag-bg@@dark": "#EFE114",
+  "minimal-style@@tag-bg@@dark": "#616292",
   "minimal-style@@tag-color@@light": "#FFFFFF",
-  "minimal-style@@tag-color@@dark": "#020202",
-  "minimal-style@@tag-bg2@@dark": "#6200F9",
-  "minimal-style@@h2-color@@dark": "#6A6AF4",
+  "minimal-style@@tag-color@@dark": "#F0EEEE",
   "minimal-style@@tx1@@dark": "#FBFBFD",
-  "minimal-style@@ax2@@dark": "#BF95F9",
+  "minimal-style@@ax2@@dark": "#99B6EA",
   "minimal-style@@ig-adjust-reading": -0.65,
   "minimal-style@@ig-adjust-edit": -1,
   "minimal-style@@active-line-on": true,
   "minimal-style@@active-line-bg@@light": "#2EBD8D",
-  "minimal-style@@active-line-bg@@dark": "#38345587"
+  "minimal-style@@active-line-bg@@dark": "#38345587",
+  "minimal-style@@h2-l": false,
+  "minimal-style@@h4-variant": "normal",
+  "minimal-style@@h5": "1em",
+  "minimal-style@@h6": "1em",
+  "minimal-style@@h5-variant": "normal",
+  "minimal-style@@h6-variant": "normal",
+  "minimal-style@@row-lines": false,
+  "minimal-style@@table-font-size": "1.02em",
+  "minimal-style@@col-lines": false,
+  "minimal-style@@table-lines": true,
+  "minimal-style@@row-alt": false,
+  "minimal-style@@col-alt": false,
+  "minimal-style@@table-tabular": false,
+  "minimal-style@@table-numbers": false,
+  "minimal-style@@table-nowrap": false,
+  "minimal-style@@row-hover": true,
+  "minimal-style@@tag-bg2@@dark": "#616292",
+  "minimal-style@@h2-color@@dark": "#936FAF",
+  "supercharged-links@@dcfb-e9f7-before": "💻   ",
+  "supercharged-links@@3884-35b2-before": "⏰   ",
+  "supercharged-links@@3884-35b2-color": "#4D97C1",
+  "supercharged-links@@4656-54e1-before": "🌍   ",
+  "supercharged-links@@4656-54e1-color": "#564C9A",
+  "supercharged-links@@4541-6f9a-before": "🐍. ",
+  "supercharged-links@@4541-6f9a-color": "#929A4C",
+  "supercharged-links@@f07f-d1ca-before": "💪🏻.  ",
+  "supercharged-links@@f07f-d1ca-color": "#EAB500",
+  "supercharged-links@@b9a9-5f0c-before": "📒 ",
+  "supercharged-links@@3884-35b2-after": "\"\""
 }
