--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,7 +117,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # │ Style │
 # └───────┘
 
-set -g status-utf8 on
+# set -g status-utf8 on
 
 set -g status-left-length 40
 # set -g status-left ' '
@@ -126,8 +126,6 @@ set -g status-right ''
 set -g status-left "#[fg=colour233,bg=colour12,bold] %m/%d | #[fg=colour233,bg=bg=cyan,bold] %H:%M "
 
 
-set -g status-fg white
-set -g status-bg black
 
 set-option -g status-position bottom
 
@@ -136,13 +134,13 @@ setw -g window-status-format '#I #W'
 set -g status-justify centre  # 
 
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+# setw -g window-status-fg cyan
+# setw -g window-status-bg default
+# setw -g window-status-attr dim
+#
+# setw -g window-status-current-fg white
+# setw -g window-status-current-bg red
+# setw -g window-status-current-attr bright
 
 # ┌─────┐
 # │ 2.0 │
