--- a/zsh/.config/lazygit/state.yml
+++ b/zsh/.config/lazygit/state.yml
@@ -1,6 +1,6 @@
 lastupdatecheck: 0
 recentrepos:
-- /home/ubuntu/dotfile
+- /root/dotfile
 startuppopupversion: 5
 customcommandshistory: []
 hidecommandlog: false
