--- a/zsh/.config/lazygit/state.yml
+++ b/zsh/.config/lazygit/state.yml
@@ -1,6 +1,7 @@
 lastupdatecheck: 0
 recentrepos:
 - /root/dotfile
+- /root/quant_alpha_v5
 startuppopupversion: 5
 customcommandshistory: []
 hidecommandlog: false
