--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -22,6 +22,7 @@
     "explorer.compactFolders": false,  // compact folders in explorer
     "editor.minimap.enabled": true,
     "editor.lineNumbers":"relative",  // 相对行号 
+    "vim.highlightedyank.enable": true,
 
 
     // ┌──────────┐
@@ -134,6 +135,10 @@
         //         }
         //     ]
         // },
+        {
+            "before": ["g", "r"],
+            "commands": ["editor.action.referenceSearch.trigger"]
+        },
         {
             "before": ["H"],
             "after": ["^"]
