--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -72,17 +72,26 @@ bind x kill-pane
 bind t set status
 
 # Enable mouse mode
-setw -g mouse on
-setw -qg mode-mouse on
+set -g mouse on
+
+set -g base-index 1
+
+set -qg mode-mouse on
 set -qg mouse-select-pane on
 set -qg mouse-resize-pane on
 set -qg mouse-select-window on
-set -qg mouse-utf8 on
+
+set -q -g status-utf8 on
+setw -q -g utf8 on
+
 set -qg mouse on
 
 # Default terminal mode
-set -g default-terminal 'xterm-256color'
-set -sa terminal-overrides ',xterm-256color:RGB'
+# set -g default-terminal 'xterm-256color'
+# set -sa terminal-overrides ',xterm-256color:RGB'
+
+set-option -sa terminal-overrides ',screen-256color:RGB'
+set-option -sa terminal-overrides ',XXX:RGB'
 
 
 
@@ -117,7 +126,6 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # │ Style │
 # └───────┘
 
-# set -g status-utf8 on
 
 set -g status-left-length 40
 # set -g status-left ' '
