--- a/joshuto/.config/joshuto/keymap.toml
+++ b/joshuto/.config/joshuto/keymap.toml
@@ -5,7 +5,7 @@ keymap = [
 
     # { keys = [ "'" ],		command = ":shell " },
     { keys = [ "S" ],		command = "shell zsh" },
-    { keys = [ "ctrl+g" ],		command = "shell lazygit" },
+    { keys = [ "ctrl+h" ],		command = "shell lazygit" },
     { keys = [ "a" ],		command = ":mkdir " },
 
     # vim-like keybindings
@@ -31,7 +31,7 @@ keymap = [
     # { keys = [ "Q" ],		command = "quit --output-current-directory" },
     #
     # { keys = [ "R" ],		command = "reload_dirlist" },
-    # { keys = [ "z", "h" ],		command = "toggle_hidden" },
+    { keys = [ "z", "h" ],		command = "toggle_hidden" },
     # { keys = [ "ctrl+h" ],		command = "toggle_hidden" },
     # { keys = [ "t", "i" ],		command = "tab_switch 1" },
     # { keys = [ "t", "n" ],		command = "tab_switch -1" },
@@ -52,12 +52,12 @@ keymap = [
     # { keys = [ "8" ],		command = "numbered_command 8" },
     # { keys = [ "9" ],		command = "numbered_command 9" },
     #
-    # # arrow keys
-    # # { keys = [ "arrow_up" ],	command = "cursor_move_up" },
-    # # { keys = [ "arrow_down" ],	command = "cursor_move_down" },
-    # # { keys = [ "arrow_left" ],	command = "cd .." },
-    # # { keys = [ "arrow_right" ],	command = "open" },
-    # { keys = [ "\n" ],		command = "open" },
+    arrow keys
+    { keys = [ "arrow_up" ],	command = "cursor_move_up" },
+    { keys = [ "arrow_down" ],	command = "cursor_move_down" },
+    { keys = [ "arrow_left" ],	command = "cd .." },
+    { keys = [ "arrow_right" ],	command = "open" },
+    { keys = [ "\n" ],		command = "open" },
     # { keys = [ "home" ],		command = "cursor_move_home" },
     # { keys = [ "end" ],		command = "cursor_move_end" },
     # { keys = [ "page_up" ],		command = "cursor_move_page_up" },
@@ -73,8 +73,8 @@ keymap = [
     # { keys = [ "n" ],		command = "cd .." },
     # { keys = [ "h" ],		command = "cd -" },
     # { keys = [ "i" ],		command = "open" },
-    # { keys = [ "g", "g" ],		command = "cursor_move_home" },
-    # { keys = [ "G" ],		command = "cursor_move_end" },
+    { keys = [ "g", "g" ],		command = "cursor_move_home" },
+    { keys = [ "G" ],		command = "cursor_move_end" },
     # { keys = [ "r" ],		command = "open_with" },
     #
     # # { keys = [ "H" ],		command = "cursor_move_page_home" },
