wezterm 无法显示 truecolor

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -89,9 +89,10 @@ set -qg mouse on
 # Default terminal mode
 # set -g default-terminal 'xterm-256color'
 # set -sa terminal-overrides ',xterm-256color:RGB'
-
-set-option -sa terminal-overrides ',screen-256color:RGB'
-set-option -sa terminal-overrides ',XXX:RGB'
+#set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
 
 
 
