--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -90,10 +90,10 @@ set -qg mouse on
 # set -g default-terminal 'xterm-256color'
 # set -sa terminal-overrides ',xterm-256color:RGB'
 #set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
 # set -g default-terminal "tmux-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
 
+set -ga terminal-overrides ",*256col*:Tc"  # 修复 wezterm 无法显示 truecolor
 
 
 #bind -n S-left previous-window
