update tmux and plugin

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,59 +17,30 @@
 # source powerline 
 # source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 
-# Custom Prefix
-unbind C-b
-set-option -g prefix `
-bind ` send-prefix
+source .tmux-key.conf
+
+# ┌────────┐
+# │ option │
+# └────────┘
+
+# 支持 utf-8
+#set -g status-utf8 on
+
+# vim
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
 
 
 # Shell
 set -g default-command $SHELL
 set -g default-shell $SHELL
-
-#set -g status-utf8 on
-# 支持 utf-8
-
-
-
-# ┌────────┐
-# │ keymap │
-# └────────┘
-
-# Reload the config
-bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
-
-
-# ┌────────┐
-# │ window │
-# └────────┘
-
-unbind %
-unbind '"'
-bind b split-window -v -c '#{pane_current_path}' # 当前路径 垂直分割窗口
-bind v split-window -h -c '#{pane_current_path}' # 当前路径 水平分割窗口
-bind c new-window -c "#{pane_current_path}"      # 当前路径 水平分割窗口
-
-unbind c-]
-
-
-
-
-#bind b split-window -v # 当前位置 垂直分割窗口
-#bind v split-window -h # 当前位置 水平分割窗口
-
 # Panes numbers
 set -g display-panes-active-colour colour20
 set -g display-panes-colour colour196
 
-# command mode
-bind : command-prompt
-
-# Kill panes
-bind x kill-pane
-
-# Toggle Status 
-bind t set status
 
 # Enable mouse mode
 set -g mouse on
@@ -99,8 +70,6 @@ set -ga terminal-overrides ",*256col*:Tc"  # 修复 wezterm 无法显示 truecol
 #bind -n S-left previous-window
 #bind -n S-right next-window
 
-bind h previous-window
-bind l next-window
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -143,79 +112,21 @@ setw -g window-status-format '#I #W'
 set -g status-justify centre  # 
 
 
-# setw -g window-status-fg cyan
-# setw -g window-status-bg default
-# setw -g window-status-attr dim
-#
-# setw -g window-status-current-fg white
-# setw -g window-status-current-bg red
-# setw -g window-status-current-attr bright
+# ┌────────┐
+# │ plugin │
+# └────────┘
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# ┌─────┐
-# │ 2.0 │
-# └─────┘
+set -g @themepack 'powerline/default/cyan'
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 
 
-# set -g status-bg '#718599'
-# set -g status-fg white
-# set -g status-left-length 40
-#
-# #test
-#
-# # default statusbar colors
-# set-option -g status-style bg=colour235,fg=colour136,default
-#
-# # default window title colors
-# set-window-option -g window-status-style fg=colour244,bg=colour234,dim
-#
-# # active window title colors
-# set-window-option -g window-status-current-style fg=colour166,bg=default,bright
-#
-# # pane border
-# set-option -g pane-border-style fg=colour235 #base02
-# set-option -g pane-active-border-style fg=colour136,bg=colour235
-#
-# # message text
-# set-option -g message-style bg=colour235,fg=colour166
-#
-# # pane number display
-# set-option -g display-panes-active-colour colour33 #blue
-# set-option -g display-panes-colour colour166 #orange
-#
-# # clock
-# set-window-option -g clock-mode-colour colour64 #green
-#
-# # allow the title bar to adapt to whatever host you connect to
-# set -g set-titles on
-# set -g set-titles-string "#T"
-#
-# # import
-# #if-shell "uname -s | grep -q Darwin" "source ~/.tmux.conf.osx"
-#
-# # Powerline
-# #source ~/.tmux.powerline.conf
-#
-#
-# set -g focus-events on
-#
-#
-# # # Statusbarset -g status-style bg=black
-# # set -g status-style bg=yellow
-# # set -g status-left ''
-# # set -g status-right '#[fg=black,bg=yellow] #(whoami)@#H '
-# # set -g status-right-length 70
-# # setw -g window-status-current-format '#[fg=yellow,bg=black] #I #W #F '
-# # setw -g window-status-format '#[fg=black,bg=yellow][#I #W #F]'
-# # set -g window-status-separator ''
-# # set-option -g history-limit 250000
-# #
-# # set-option -g renumber-windows on
-# #
-# # set -g status-right '#[fg=green,bg=default,bright]#(uptime) #[fg=white,bg=default]%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d%a'
-# #
-# #
-# # set -s escape-time 1
-# #
-# #
-# #
+run '~/.tmux/plugins/tpm/tpm'
+
+
