--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,7 @@ set -g display-panes-colour colour196
 # Enable mouse mode
 set -g mouse on
 
-set -g base-index 1
+set -g base-index 1 # set numbers start from 0
 
 set -qg mode-mouse on
 set -qg mouse-select-pane on
@@ -97,33 +97,46 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # └───────┘
 
 
-set -g status-left-length 40
-# set -g status-left ' '
-set -g status-right ''
-# set -g status-left "#[fg=colour233,bg=colour12,bold] #h: #S #[fg=colour233,bg=yellow,bold] #I #[fg=colour233,bg=cyan,bold] #P "
-set -g status-left "#[fg=colour233,bg=colour12,bold] %m/%d | #[fg=colour233,bg=bg=cyan,bold] %H:%M "
-
-
-
-set-option -g status-position bottom
-
-setw -g window-status-current-format '#[underscore,bold]#I #W'
-setw -g window-status-format '#I #W'
-set -g status-justify centre  # 
-
 
 # ┌────────┐
 # │ plugin │
 # └────────┘
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @themepack 'powerline/default/cyan'
-
-set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
+
+# set -g @themepack 'powerline/default/cyan'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_status_modules_right "directory meetings date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g @catppuccin_date_time_text "%H:%M"
+
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # increase history size (from 2,000)
+set -g renumber-windows on       # renumber all windows when any window is closed
+set -g set-clipboard on          # use system clipboard
+set -g status-position top       # macOS / darwin style
 
 
 
