--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -7,7 +7,7 @@ $directory\
 [](fg:#DA627D bg:#cf7451)\
 $git_branch\
 $git_status\
-[](fg:#cf7451 bg:#86BBD8)\
+[](fg:#cf7451 bg:#6395b0)\
 $c\
 $elixir\
 $elm\
@@ -17,10 +17,11 @@ $haskell\
 $java\
 $julia\
 $nodejs\
+$python\
 $nim\
 $rust\
 $scala\
-[](fg:#86BBD8 bg:#06969A)\
+[](fg:#6395b0 bg:#06969A)\
 $docker_context\
 [](fg:#06969A bg:#33658A)\
 $time\
@@ -66,7 +67,7 @@ truncation_symbol = "…/"
 
 [c]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [docker_context]
@@ -76,12 +77,12 @@ format = '[ $symbol $context ]($style)'
 
 [elixir]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [elm]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
@@ -95,46 +96,51 @@ format = '[$all_status$ahead_behind ]($style)'
 
 [golang]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [gradle]
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [haskell]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [java]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [julia]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
 symbol = ""
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [nim]
 symbol = "󰆥 "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [rust]
 symbol = ""
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [scala]
 symbol = " "
-style = "bg:#86BBD8"
+style = "bg:#6395b0"
+format = '[ $symbol ($version) ]($style)'
+
+[python]
+symbol = "🅒  "
+style = "bg:#6395b0"
 format = '[ $symbol ($version) ]($style)'
 
 [time]
