--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,7 +17,7 @@
 # source powerline 
 # source /usr/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 
-source .tmux-key.conf
+# source .tmux-key.conf
 
 # ┌────────┐
 # │ keymap │
